--- a/Physiotherapist_project/templates/Physiotherapist_project/booking.html
+++ b/Physiotherapist_project/templates/Physiotherapist_project/booking.html
@@ -1,196 +1,143 @@
-
-
-<!DOCTYPE html>
-<html lang="en">
+{% extends "basic.html" %}
 {% load i18n %}
 {% load static %}
 {% load crispy_forms_tags %}
+<body>
+{% block content %}
 
-  <head>
-    <title>Fizjoterapia</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
-    <link href="{% static 'https://fonts.googleapis.com/css?family=Rubik:400,700' %}" rel="stylesheet">
-
-    <link rel="stylesheet" href="{% static '/fonts/icomoon/style.css'%}">
-
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
-    <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
-
-    <link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.css' %}">
-
-    <link rel="stylesheet" href="{% static 'fonts/flaticon/font/flaticon.css' %}">
-
-    <link rel="stylesheet" href="{% static 'css/aos.css' %}">
-    <link rel="stylesheet" href="{% static 'css/rangeslider.css' %}">
-
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-      <!-- Date Time Picker CSS -->
-  <link rel="stylesheet" href="{% static 'date-time-phone/jquery-ui.css' %}">
-  <link rel='stylesheet' href="{% static 'date-time-phone/jquery-ui-timepicker-addon.css' %}" />
-  <!-- Date Time Picker CSS -->
-  </head>
-  <body>
-
-  <div class="site-wrap">
+<div class="site-wrap">
 
     <div class="site-mobile-menu">
-      <div class="site-mobile-menu-header">
-        <div class="site-mobile-menu-close mt-3">
-          <span class="icon-close2 js-menu-toggle"></span>
+        <div class="site-mobile-menu-header">
+            <div class="site-mobile-menu-close mt-3">
+                <span class="icon-close2 js-menu-toggle"></span>
+            </div>
         </div>
-      </div>
-      <div class="site-mobile-menu-body"></div>
+        <div class="site-mobile-menu-body"></div>
     </div>
 
     <header class="site-navbar" role="banner">
 
-      <div class="container">
-                   <div class="block-quick-info-2">
+        <div class="container">
+            <div class="block-quick-info-2">
 
-            <h1 class="mb-0 site-logo"><a href="{% url 'start' %}" class="text-white mb-0">Fizjoterapia<span class="text-primary">.</span> </a></h1>
-          </div>
-        <div class="row align-items-center">
-
-
-          <div class="col-12 col-md-8 d-none d-xl-block">
-          </div>
+                <h1 class="mb-0 site-logo"><a href="{% url 'start' %}" class="text-white mb-0">Fizjoterapia<span
+                        class="text-primary">.</span> </a></h1>
+            </div>
+            <div class="row align-items-center">
 
 
-          </div>
+                <div class="col-12 col-md-8 d-none d-xl-block">
+                </div>
 
-        </div>
-      </div>
-
-    </header>
-
-
-
-
-
-    <div class="site-blocks-cover overlay" style="background-image: url({% static 'images/hero_bg_1.jpg' %});" data-aos="fade" data-stellar-background-ratio="0.5">
-      <div class="container">
-        <div class="row align-items-center justify-content-center text-center">
-
-          <div class="col-md-10">
-
-            <div class="row justify-content-center mb-4">
 
             </div>
-            <form id="BookingForm"
-                  product="{% url 'ajax_load_product' %}"
-                  session="{% url 'ajax_load_session' %}"
-                  price="{% url 'ajax_load_price' %}"
-                  class="p-5 bg-white"
-                  method="post" style="margin-top: -150px;">
-
-    <script src="{% url 'js-catlog' %}"></script>
-    <script src="{% static '/admin/js/core.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
-    <link rel="stylesheet" href="{% static 'admin/css/widgets.css' %}">
-       {% csrf_token %}
-        {{ form|crispy }}
-              <div class="col-md-12">
-                  <input type="submit" value="Zarezerwuj" class="btn btn-pill btn-primary btn-md text-white"></div>
-
-          </div>
-            </form>
-               <script src='datepicker-pl.js' type='text/javascript'>
-                   <!-- Date Time Picker JS -->
-  <script src="{% static 'date-time-phone/jquery-ui.js' %}" ></script>
-  <script src="{% static 'date-time-phone/jquery-ui-timepicker-addon.js' %}"></script>
-
-              <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script>
-
-    $("#id_physiotherapist").change(function () {
-      var url = $("#BookingForm").attr("product");
-      var physiotherapistId = $(this).val();
-
-      $.ajax({
-        url: url,
-        data: {
-          'physiotherapist': physiotherapistId
-        },
-        success: function (data) {
-          $("#id_product").html(data);
-        }
-      });
-
-    });
-
-    $("#id_product").change(function () {
-      var url = $("#BookingForm").attr("session");
-      var value = $("[name='product']");
-      var myVal = value.find(":selected").val();
-      var productId = $(this).val();
-
-      $.ajax({
-        url: url,
-        data: {
-          'product': myVal
-        },
-        success: function (data) {
-          $("#id_session").html(data);
-        }
-      });
-
-    });
-
-  $("#id_session").change(function () {
-    var url = $("#BookingForm").attr("price");
-    var value = $("[name='session']");
-    var myVal = value.find(":selected").val()
-    var sessionId = $(this).val();
-
-    $.ajax({
-      url: url,
-      data: {
-        'session': sessionId
-      },
-      success: function (data) {
-        $("#id_price").html(data);
-      }
-    });
-
-  });
-</script>
-          </div>
 
         </div>
+</div>
 
-      </div>
+</header>
+
+
+<div class="site-blocks-cover overlay" style="background-image: url({% static 'images/hero_bg_1.jpg' %});"
+     data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="container">
+        <div class="row align-items-center justify-content-center text-center">
+
+            <div class="col-md-10">
+
+                <div class="row justify-content-center mb-4">
+
+                </div>
+                <form id="BookingForm"
+                      product="{% url 'ajax_load_product' %}"
+                      session="{% url 'ajax_load_session' %}"
+                      price="{% url 'ajax_load_price' %}"
+                      class="p-5 bg-white"
+                      method="post" style="margin-top: -150px;">
+
+                    <script src="{% url 'js-catlog' %}"></script>
+                    <script src="{% static '/admin/js/core.js' %}"></script>
+                    <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
+                    <link rel="stylesheet" href="{% static 'admin/css/widgets.css' %}">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <div class="col-md-12">
+                        <input type="submit" value="Zarezerwuj" class="btn btn-pill btn-primary btn-md text-white">
+                    </div>
+
+            </div>
+            </form>
+            <script src='datepicker-pl.js' type='text/javascript'>
+                <!-- Date Time Picker JS -->
+                <script src="{% static 'date-time-phone/jquery-ui.js' %}"></script>
+            <script src="{% static 'date-time-phone/jquery-ui-timepicker-addon.js' %}"></script>
+
+            <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+            <script>
+
+                $("#id_physiotherapist").change(function () {
+                    var url = $("#BookingForm").attr("product");
+                    var physiotherapistId = $(this).val();
+
+                    $.ajax({
+                        url: url,
+                        data: {
+                            'physiotherapist': physiotherapistId
+                        },
+                        success: function (data) {
+                            $("#id_product").html(data);
+                        }
+                    });
+
+                });
+
+                $("#id_product").change(function () {
+                    var url = $("#BookingForm").attr("session");
+                    var value = $("[name='product']");
+                    var myVal = value.find(":selected").val();
+                    var productId = $(this).val();
+
+                    $.ajax({
+                        url: url,
+                        data: {
+                            'product': myVal
+                        },
+                        success: function (data) {
+                            $("#id_session").html(data);
+                        }
+                    });
+
+                });
+
+                $("#id_session").change(function () {
+                    var url = $("#BookingForm").attr("price");
+                    var value = $("[name='session']");
+                    var myVal = value.find(":selected").val()
+                    var sessionId = $(this).val();
+
+                    $.ajax({
+                        url: url,
+                        data: {
+                            'session': sessionId
+                        },
+                        success: function (data) {
+                            $("#id_price").html(data);
+                        }
+                    });
+
+                });
+            </script>
+        </div>
 
     </div>
 
+</div>
 
-  </div>
-
-  <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-  <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
-  <script src="{% static 'js/jquery-ui.js' %}"></script>
-  <script src="{% static 'js/popper.min.js' %}"></script>
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-  <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
-  <script src="{% static 'js/jquery.countdown.min.js' %}"></script>
-  <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
-  <script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
-  <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-
-  <script src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
-  <script src="{% static 'js/aos.js' %}"></script>
-  <script src="{% static 'js/rangeslider.min.js' %}"></script>
+</div>
 
 
-
-  <script src="{% static 'js/main.js' %}"></script>
-
-  </body>
+</div>
+{% endblock %}
+</body>
 </html>
