--- a/Physiotherapist_project/templates/Physiotherapist_project/info_product.html
+++ b/Physiotherapist_project/templates/Physiotherapist_project/info_product.html
@@ -1,36 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<!DOCTYPE html>
-<html lang="en">
+{% extends "basic.html" %}
 {% load static %}
-  <head>
-     <title>Fizjoterapia</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
-    <link href="{% static 'https://fonts.googleapis.com/css?family=Rubik:400,700' %}" rel="stylesheet">
-
-    <link rel="stylesheet" href="{% static '/fonts/icomoon/style.css'%}">
-
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/magnific-popup.css '%}">
-    <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
-
-    <link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.css' %}">
-
-    <link rel="stylesheet" href="{% static 'fonts/flaticon/font/flaticon.css' %}">
-
-    <link rel="stylesheet" href="{% static 'css/aos.css' %}">
-    <link rel="stylesheet" href="{% static 'css/rangeslider.css' %}">
-
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-  </head>
 <body>
+{% block content %}
+
 Tu będzie info o produkcie
+{% endblock %}
 </body>
 </html>
